# attrition-esn-model

./: .coverage  .gitignore  CODE_OF_CONDUCT.md  README.md  README_HF.md  class_index.html  environment.yml  function_index.html  gemini.py  index.html  main.py  pyproject.toml  raw_full.csv  requirements.txt  requirements_hf.txt  schema.sql  status.json  z_5f5a17c013354698___init___py.html  z_5f5a17c013354698_api_py.html  z_a44f0ac069e85531___init___py.html  z_a44f0ac069e85531_conftest_py.html  z_a44f0ac069e85531_test_functional_api_py.html  z_a44f0ac069e85531_test_unit_api_py.html
.github/workflows/: ci.yml  release-to-prod.yml  release-to-test.yml
app/: api.py  attrition_esn  config.yaml  db.py  explainer.py  gradio_frontend.py  init.py  main.py  model.py
docs/: Makefile  presentation.html  presentation.md  workflow_markdown.md
models/: model_pipeline.joblib
notebooks/: 01_notebook.ipynb
scripts/: create_db.py  evaluate_db.py  log_check.py  pg_to_sqlite_export.py
tests/: conftest.py  test_functional_api.py  test_unit_api.py
