[project]
name = "attrition-esn"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "jupyter>=1.1.1",
    "matplotlib>=3.10.6",
    "notebook>=7.4.7",
    "numpy>=2.3.3",
    "pandas>=2.3.3",
    "scikit-learn>=1.7.2",
    "seaborn>=0.13.2",
]

[dependency-groups]
dev = [
    "imbalanced-learn>=0.14.0",
    "ipython>=9.6.0",
    "jupyterlab>=4.4.9",
    "pytest>=8.4.2",
    "shap>=0.48.0",
]
lint = [
    "black>=25.9.0",
    "ruff>=0.13.2",
]
